# etl-google-analytics

./: .gitignore  Makefile
.github/workflows/: continuos_integration.yml  formatacao_checar.yml  impulsogaetl-publicar.yml
google_analytics/: Dockerfile  pyproject.toml  requirements.txt  setup.cfg
google_analytics/src/google_analytics/: __init__.py  principal.py
google_analytics/src/google_analytics/google_analytics_4/quickstart/: carregamento.py  extracao.py  tratamento.py
google_analytics/tests/scripts/: IMPULSO_PREVINE_GA4_QUICKSTART.parquet
src/google_analytics/: bd.py
src/google_analytics/google_analytics_4/quickstart/: extracao.py  principal.py  teste.py
src/google_analytics/scripts/: impulso_previne.py
src/google_analytics/utilitarios/: bd.py
tests/: test_principal.py
tests/scripts/: test_impulso_previne.py
