[tool.poetry]
name = "google-analytics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "google_analytics", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
sqlalchemy = "^1.4.45"
types-psycopg2 = "^2.9.21.2"
loguru = "^0.6.0"
pyupgrade = "^3.3.1"
google-analytics-data = "^0.15.0"
frozendict = "^2.3.4"
pytest = "^7.2.0"
pyarrow = "^10.0.1"
jsonio = "^0.1.4"
mkdocs = "^1.4.2"
black = "^22.12.0"

[tool.poetry.scripts]
impulso-google-analytics = "google_analytics.principal:principal"

[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
prospector = "^1.8.3"
pip-audit = "^2.4.12"

[settings]
known_third_party = ["pytest", "requests"]
[tool.black]
line-length = 120
[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
